--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
         <a href="guids.html" class="btn btn-outline-dark mb-4">Tour Guids</a>
       </div>
       <div class="col-lg-6">
-        <img src="img/about.jpg" class="img-fluid">
+        <img src="about.jpg" class="img-fluid">
       </div>
     </div>  
     </div>
