--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <!-- navigation -->
 <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top ">
   <div class="container-fluid">
-    <a class="navbar-brand " href="#"><img src="img/logo.png"></a>
+    <a class="navbar-brand " href="#"><img src="logo.png"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -72,7 +72,7 @@
   </ul>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/background1.jpg">
+      <img src="background1.jpg">
       <div class="carousel-caption">
         <h1 class="display-2">Halloween</h1>
         <h3>Trick or Treat?</h3>
@@ -81,10 +81,10 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="img/background2.jpg">
+      <img src="background2.jpg">
     </div>
     <div class="carousel-item">
-      <img src="img/background3.jpg">
+      <img src="background3.jpg">
     </div>
   </div>
 </div>
@@ -155,7 +155,7 @@
     <a href="tour.html" class="btn btn-secondary mb-4">ツアーを見学</a>
   </div>
   <div class="col-lg-6">
-    <img src="img/tour.jpg" class="img-fluid">
+    <img src="tour.jpg" class="img-fluid">
   </div>
 </div>  
 </div>
@@ -179,16 +179,16 @@
     
     
     <div class="col-md-6 col-lg-3 mb-2">
-      <img class="gif" src="img/gif/pumpkindog.gif">
+      <img class="gif" src="pumpkindog.gif">
     </div>
     <div class="col-md-6 col-lg-3 mb-2">
-      <img class="gif" src="img/gif/grumpycat.gif">
+      <img class="gif" src="grumpycat.gif">
     </div>
     <div class="col-md-6 col-lg-3 mb-2">
-      <img class="gif" src="img/gif/jack.gif">
+      <img class="gif" src="jack.gif">
     </div>
     <div class="col-md-6 col-lg-3">
-      <img class="gif" src="img/gif/dog1.gif">
+      <img class="gif" src="dog1.gif">
     </div>
   </div>
   </div>
@@ -210,7 +210,7 @@
 
   <div class="col-md-4">
     <div class="card">
-      <img src="img/cast2.jpg" class="card-img-top" id="jackHome">
+      <img src="cast2.jpg" class="card-img-top" id="jackHome">
       <div class="card-body">
         <h4 class="card-title" >ジャック</h4>
         <p>ハロウィン王国に住むパンプキンの王様。<br>ゴーストツアー担当です。</p>
@@ -221,7 +221,7 @@
 
   <div class="col-md-4">
     <div class="card">
-      <img src="img/cast1.jpg" class="card-img-top" id="pukkaHome">
+      <img src="cast1.jpg" class="card-img-top" id="pukkaHome">
       <div class="card-body">
         <h4 class="card-title" >プッカ</h4>
         <p>クリスマスタウンに住むおしゃべりなペンギン。<br>魔法使いツアー担当です。</p>
@@ -234,7 +234,7 @@
   
   <div class="col-md-4">
     <div class="card">
-      <img src="img/cast3.jpg" class="card-img-top" id="cookieHome">
+      <img src="cast3.jpg" class="card-img-top" id="cookieHome">
       <div class="card-body">
         <h4 class="card-title" >クッキー</h4>
         <p>どうぶつの森に住む冒険好きの子犬。<br>ほうきツアー担当です。</p>
@@ -257,7 +257,7 @@
       <br>
     </div>
     <div class="col-lg-6">
-      <img src="img/center.jpg" class="img-fluid">
+      <img src="center.jpg" class="img-fluid">
     </div>
   </div> 
     <hr class="my-4"> 
@@ -283,7 +283,7 @@
   <div class="container-fluid padding">
     <div class="row text-center">
       <div class="col-md-4">
-        <img src="img/footerLogo.png">
+        <img src="footerLogo.png">
         <hr class="light">
         <p>123-456-789</p>
         <p>halloween@pumpkin.com</p>
