--- a/treat.html
+++ b/treat.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TREAT</title>
-  <link rel="stylesheet" href="css/trickTreat.css">
+  <link rel="stylesheet" href="trickTreat.css">
 </head>
 <body>
   <p class="yum">yumyum</p>
-  <img src="img/gif/sweets.gif" class="sweetPic">
+  <img src="sweets.gif" class="sweetPic">
   
   <a href="index.html"><button type="btn" class="btn-treat">Go back & pick a tour</button></a>
 </body>
