--- a/trick.html
+++ b/trick.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TRICK</title>
-  <link rel="stylesheet" href="css/trickTreat.css">
+  <link rel="stylesheet" href="trickTreat.css">
 </head>
 <body>
   <p class="jackWelcome">Welcome...</p>
-  <img src="img/gif/nightmare.gif" class="trickPic">
+  <img src="nightmare.gif" class="trickPic">
   
   <a href="index.html"><button type="btn" class="btn-trick">Escape!!</button></a>
 </body>
