--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 
   
   
-  <link rel="stylesheet" href="css/about.css">
+  <link rel="stylesheet" href="about.css">
 </head>
 <body>
   <div class="container-fluid">
