--- a/tour.html
+++ b/tour.html
@@ -14,7 +14,7 @@
 
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 
-  <link rel="stylesheet" href="css/tour.css">
+  <link rel="stylesheet" href="tour.css">
 
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
